# rusty-boat

./: .clineignore  Cargo.toml  README.md
.clinerules/: memory-bank.md  original_projectbrief.md  projectbrief.md
.clinerules/memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: lib.rs  main.rs  timing.rs
src/kv/: client.rs  mod.rs  store.rs
src/network/: message_bus.rs  mod.rs  transport.rs
src/raft/: client_response_tests.rs  client_tracker.rs  log.rs  messages.rs  mod.rs  node.rs  state.rs
src/storage/: kv_storage.rs  log_storage.rs  mod.rs  state_storage.rs
src/tests/: client_consistency.rs  client_consistency_simple.rs  integration.rs  mod.rs  tcp_transport.rs
